fixed mobile x overflow issue

--- a/public/css/main_in.css
+++ b/public/css/main_in.css
@@ -73,3 +73,7 @@
     position: absolute;
     pointer-events: none !important;
 }
+
+.truncated {
+    max-width: calc(100% - 100px);
+}
